#175: fix alignment of launch button on mobile

--- a/static/scss/row_header_bp1.scss
+++ b/static/scss/row_header_bp1.scss
@@ -85,6 +85,11 @@
 
   .header-gallery-controls {
     bottom: rem(74);
+    position: relative;
+    width: 100%;
+    text-align: center;
+    left: auto;
+    margin-left: 0;
   }
 }
 
